# Jarvis

./: .env.example  .gitignore  AGENTS.md  Jarvis.bat  README.md  jarvis_launcher.py  pyproject.toml  ruff.toml
.claude/: launch.json
assets/: README.md
config/: broker.yaml  jarvis.example.yaml
desktop_client/: __init__.py  chat_widget.py  hud_overlay.py  main_window.py  service_manager.py  settings_dialog.py  styles.py  tray_app.py
infra/: README.md  docker-compose.yml
infra/mosquitto/: mosquitto.conf
jarvis_core/: __init__.py  config.py  llm_helpers.py  logging_config.py  mqtt_helpers.py  persona.py
plugins/: __init__.py
scripts/: build_exe.py  mqtt_broker.py  start_all.py
services/: __init__.py
services/integrations/: __init__.py  calendar.py  desktop_control.py  email_calendar.py  home_assistant.py  system_control.py  web_apis.py  web_search.py
services/memory/: __init__.py  main.py
services/monitor/: __init__.py  main.py
services/nlu_agent/: __init__.py  agent.py  main.py  memory.py  tools.py
services/orchestrator/: __init__.py  main.py
services/proactive/: __init__.py  main.py
services/proactivity/: main.py
services/scheduler/: __init__.py  main.py
services/stt/: __init__.py  main.py
services/tts/: __init__.py  main.py
services/vision/: main.py
services/wakeword/: __init__.py  main.py
services/web_ui/: __init__.py  main.py
services/web_ui/static/: index.html
skills/: __init__.py  system_info.py
tests/: conftest.py  test_config.py  test_memory.py  test_nlu_rules.py  test_orchestrator.py  test_startup.py
