[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-assistant"
version = "0.1.0"
description = "Local-first Jarvis-style voice assistant with modular services for STT, TTS, NLU, orchestration, and smart-home integrations."
authors = [
  { name = "Jarvis User" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "paho-mqtt>=2.1.0",
  "sounddevice>=0.4.6",
  "vosk>=0.3.45",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "apscheduler>=3.10.4",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "pyttsx3>=2.90",
  "dateparser>=1.2.0",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
]
wakeword = [
  "openwakeword",
]
desktop = [
  "PySide6>=6.6.0",
  "pystray>=0.19.0",
  "Pillow>=10.0.0",
]

[tool.setuptools]
packages = ["jarvis_core", "services", "services.integrations", "desktop_client"]

