[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-assistant"
version = "0.2.0"
description = "J.A.R.V.I.S. — a local-first, privacy-focused voice assistant inspired by the MCU, with modular services for STT, TTS, NLU, orchestration, smart-home, and web integrations."
authors = [
  { name = "Jarvis User" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "paho-mqtt>=2.1.0",
  "sounddevice>=0.4.6",
  "vosk>=0.3.45",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "apscheduler>=3.10.4",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "pyttsx3>=2.90",
  "dateparser>=1.2.0",
  "sqlalchemy>=2.0.0",
  "duckduckgo-search>=4.0",
  "psutil>=5.9.0",
  "numpy>=1.24.0",
  "aiofiles>=23.0",
  "websockets>=12.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "httpx",
]
xtts = [
  "TTS>=0.22.0",
]
wakeword = [
  "openwakeword",
]
desktop = [
  "PySide6>=6.6.0",
  "pystray>=0.19.0",
  "Pillow>=10.0.0",
]

[tool.setuptools]
packages = [
  "jarvis_core",
  "services",
  "services.integrations",
  "services.nlu_agent",
  "services.orchestrator",
  "services.scheduler",
  "services.stt",
  "services.tts",
  "services.wakeword",
  "services.memory",
  "services.web_ui",
  "services.proactive",
  "services.monitor",
  "desktop_client",
  "skills",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
